# imagine_dic

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/imagine/: CMakeLists.txt  blaze.cpp  eigen.cpp  matplot.cpp
src/imagine/include/imagine/: matplot.hpp
src/imagine_app/: CMakeLists.txt  gui_manager.cpp  main.cpp
src/imagine_app/include/: gui_manager.hpp
tests/: CMakeLists.txt
tests/imagine/: CMakeLists.txt  test-1.cpp
